# dksave

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.template  LICENSE  by_vcpkg_configure.sh.template  configure.sh  configure.sh.template  dkconfig.yaml.template  k4aconfig.yaml.template  obconfig.yaml.template  vcpkg.json
cmake/: cpack.cmake  download_file.cmake  get_filename_from_url.cmake  instruction_extensions.cmake  third_party.cmake
include/: DKCamera.hpp  current_time.hpp  dkconfig.hpp  logger.hpp  save_cv_mat.hpp  ucamera.hpp  ucamera_factory.hpp  working_status.hpp
include/config/: k4a_config.hpp  ob_config.hpp
include/context/: k4a_img_color_to_cv_mat_context_t.hpp  k4a_img_depth_to_cv_mat_context_t.hpp  k4a_img_depth_transform_to_color_mode_context_t.hpp  k4a_img_depth_transform_to_point_cloud_mode_context_t.hpp  k4a_img_point_cloud_to_pcl_point_cloud_context_t.hpp
include/context/k4a_context/: k4a_img_color_to_cv_mat_context_t.hpp  k4a_img_depth_to_cv_mat_context_t.hpp  k4a_img_depth_transform_to_color_mode_context_t.hpp  k4a_img_depth_transform_to_point_cloud_mode_context_t.hpp  k4a_img_ir_to_cv_mat_context_t.hpp  k4a_img_point_cloud_to_pcl_point_cloud_context_t.hpp
include/context/ob_context/: H264_to_cv_mat_context.hpp
include/dksave/: current_time.hpp  global_settings.hpp  logger.hpp  registration_mode_t.hpp  rotate_flag_t.hpp  save_cv_mat.hpp  working_status.hpp
include/dksave/context/: image_rotate_context_t.hpp
include/dksave/plugins/: ucamera.hpp  ucamera_factory.hpp
include/dksave/plugins/k4a/: camera.hpp  camera_factory.hpp  config.hpp
include/dksave/plugins/k4a/context/: k4a_img_color_to_cv_mat_context_t.hpp  k4a_img_color_transform_to_depth_mode_context_t.hpp  k4a_img_depth_to_cv_mat_context_t.hpp  k4a_img_depth_transform_to_color_mode_context_t.hpp  k4a_img_depth_transform_to_point_cloud_mode_context_t.hpp  k4a_img_ir_to_cv_mat_context_t.hpp  k4a_img_point_cloud_to_pcl_point_cloud_context_t.hpp
include/dksave/plugins/ob/: camera.hpp  camera_factory.hpp  config.hpp
include/dksave/plugins/ob/context/: H264_to_cv_mat_context.hpp  H264_to_cv_mat_context_t.hpp  ob_color_frame_to_cv_mat_context_t.hpp  ob_frame_depth_to_cv_mat_context_t.hpp  ob_img_depth_transform_to_color_mode_context_t.hpp
include/dksave/scheduler/: mono_camera_scheduler.hpp  scheduler_base.hpp  sync_group_scheduler.hpp
include/ucamera_factories/: k4a_camera_factory.hpp  ob_camera_factory.hpp
include/ucameras/: k4a_camera.hpp  ob_camera.hpp
ori/: DKsave.cpp  DKsave2.cpp
src/: CMakeLists.txt  dksave.cpp  main.cpp
src/dksave/: current_time.cxx  global_settings.cxx  logger.cxx  registration_mode_t.cxx  rotate_flag_t.cxx  save_cv_mat.cxx  working_status.cxx
src/dksave/context/: image_rotate_context_t.cxx
src/dksave/plugins/: CMakeLists.txt  ucamera.cxx  ucamera_factory.cxx
src/dksave/plugins/k4a/: CMakeLists.txt  camera.cxx  camera_factory.cxx  config.cxx
src/dksave/plugins/k4a/context/: k4a_img_color_to_cv_mat_context_t.cxx  k4a_img_color_transform_to_depth_mode_context_t.cxx  k4a_img_depth_to_cv_mat_context_t.cxx  k4a_img_depth_transform_to_color_mode_context_t.cxx  k4a_img_depth_transform_to_point_cloud_mode_context_t.cxx  k4a_img_ir_to_cv_mat_context_t.cxx  k4a_img_point_cloud_to_pcl_point_cloud_context_t.cxx
src/dksave/plugins/ob/: CMakeLists.txt  camera.cxx  camera_factory.cxx  config.cxx
src/dksave/plugins/ob/context/: H264_to_cv_mat_context_t.cxx  ob_color_frame_to_cv_mat_context_t.cxx  ob_frame_depth_to_cv_mat_context_t.cxx  ob_img_depth_transform_to_color_mode_context_t.cxx
src/dksave/scheduler/: mono_camera_scheduler.cxx  scheduler_base.cxx  sync_group_scheduler.cxx
